Add basic elements to page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <title>Resonant Woods Link Tree</title>
 </head>
 <body>
-    
+    <h1>Resonant Woods</h1>
+    <section>
+        <a target="_blank" class="button" href="#">
+            <img src="" alt="" width="30" height="30">
+            BandCamp
+        </a>
+        <a target="_blank" class="button" href="#">
+            <img src="" alt="" width="30" height="30">
+            Spotify
+        </a>
+        <a target="_blank" class="button" href="#">
+            <img src="" alt="" width="30" height="30">
+            YouTube
+        </a>
+        <a target="_blank" class="button" href="#">
+            <img src="" alt="" width="30" height="30"><script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="resonantwoods" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+            Apple Music
+        </a>
+    </section>
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="resonantwoods" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </body>
 </html>
