Add font and icons and styling

--- a/index.html
+++ b/index.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+    </style>
     <title>Resonant Woods Link Tree</title>
 </head>
 <body>
     <h1>Resonant Woods</h1>
-    <section>
+    <iframe class="featured-track" style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=1044242391/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://resonantwoods.bandcamp.com/track/reverie">Reverie by Resonant Woods</a></iframe>
+    <section class="button-links">
         <a target="_blank" class="button" href="#">
-            <img src="" alt="" width="30" height="30">
-            BandCamp
+            <img src="resources/icons/bandcamp.svg" alt="Bandcamp logo icon" width="30" height="30">
+            <h2>Bandcamp</h2>
         </a>
         <a target="_blank" class="button" href="#">
-            <img src="" alt="" width="30" height="30">
-            Spotify
+            <img src="resources/icons/spotify.svg" alt="Spotify logo icon" width="30" height="30">
+            <h2>Spotify</h2>
         </a>
         <a target="_blank" class="button" href="#">
-            <img src="" alt="" width="30" height="30">
-            YouTube
+            <img src="resources/icons/youtube.svg" alt="YouTube logo icon" width="30" height="30">
+            <h2>YouTube</h2>
         </a>
         <a target="_blank" class="button" href="#">
-            <img src="" alt="" width="30" height="30"><script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="resonantwoods" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
-            Apple Music
+            <img src="resources/icons/apple-music.svg" alt="Apple Music logo icon" width="30" height="30"><script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="resonantwoods" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+            <h2>Apple Music</h2>
         </a>
     </section>
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="resonantwoods" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
