--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <h1>Resonant Woods</h1>
     <iframe class="featured-track" style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=1044242391/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://resonantwoods.bandcamp.com/track/reverie">Reverie by Resonant Woods</a></iframe>
     <section class="button-links">
-        <a target="_blank" class="button" href="#">
+        <a target="_blank" class="button" href="https://resonantwoods.bandcamp.com/">
             <img src="resources/icons/bandcamp.svg" alt="Bandcamp logo icon" width="30" height="30">
             <h2>Bandcamp</h2>
         </a>
-        <a target="_blank" class="button" href="#">
+        <a target="_blank" class="button" href="https://open.spotify.com/artist/5MHqaJxKDZEdk4Zh5TIMV4">
             <img src="resources/icons/spotify.svg" alt="Spotify logo icon" width="30" height="30">
             <h2>Spotify</h2>
         </a>
-        <a target="_blank" class="button" href="#">
+        <a target="_blank" class="button" href="https://www.youtube.com/channel/UCA3p1oSWj6YRdxgywSY1Rmg">
             <img src="resources/icons/youtube.svg" alt="YouTube logo icon" width="30" height="30">
             <h2>YouTube</h2>
         </a>
-        <a target="_blank" class="button" href="#">
+        <a target="_blank" class="button" href="https://music.apple.com/us/artist/resonant-woods/1630436567">
             <img src="resources/icons/apple-music.svg" alt="Apple Music logo icon" width="30" height="30"><script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="resonantwoods" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
             <h2>Apple Music</h2>
         </a>
