Update page title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
     </style>
-    <title>Resonant Woods Link Tree</title>
+    <title>Resonant Woods Linktree</title>
 </head>
 <body>
     <h1>Resonant Woods</h1>
